hphp/hack/test/package_v2/package_access/cross_package_with_requirepackage_attr_inheritance.php.exp.v1
error: Typing[4341] The method test2 is not compatible with the overridden method [1]
-> Method test2 has type (function(): void) in A [1]
-> But it has type (function(): void) in parent IA [2]
-> Type (function(): void) is not a subtype of (function(): void) [1]
-> Cross package mismatch [1]
-> This function is marked <<__CrossPackage(pkg1)>>, so it's only compatible with other functions marked <<__CrossPackage(pkg1)>> [1]
-> This function is marked <<__CrossPackage(pkg2)>> [2]

cross_package_with_requirepackage_attr_inheritance.php--a.php:14:19
     4 | interface IA {
     5 |   <<__RequirePackage("pkg2")>>
[2]  6 |   public function test2(): void;
     7 | }
     8 | 
       :
    12 |   }
    13 |   <<__RequirePackage("pkg1")>> // error cross package mismatch
[1] 14 |   public function test2(): void {
    15 |   }
    16 | }

error: Typing[4341] Some members in class B are incompatible with those declared in type IA [1]
-> The method test2 is not compatible with the overridden method [2]
-> Method test2 has type (function(): void) in B and comes from ancestor or trait A [2]
-> But it has type (function(): void) in parent IA [3]
-> Type (function(): void) is not a subtype of (function(): void) [2]
-> Cross package mismatch [2]
-> This function is marked <<__CrossPackage(pkg1)>>, so it's only compatible with other functions marked <<__CrossPackage(pkg1)>> [2]
-> This function is marked <<__CrossPackage(pkg2)>> [3]

cross_package_with_requirepackage_attr_inheritance.php--a.php:17:30
     4 | interface IA {
     5 |   <<__RequirePackage("pkg2")>>
[3]  6 |   public function test2(): void;
     7 | }
     8 | 
       :
    12 |   }
    13 |   <<__RequirePackage("pkg1")>> // error cross package mismatch
[2] 14 |   public function test2(): void {
    15 |   }
    16 | }
[1] 17 | class B extends A implements IA  {
    18 |   <<__Override>>
    19 |   public function test(): void {} // ok

error: Typing[4341] Some members in class C are incompatible with those declared in type IA [1]
-> The method test2 is not compatible with the overridden method [2]
-> Method test2 has type (function(): void) in C and comes from ancestor or trait A [2]
-> But it has type (function(): void) in parent IA [3]
-> Type (function(): void) is not a subtype of (function(): void) [2]
-> Cross package mismatch [2]
-> This function is marked <<__CrossPackage(pkg1)>>, so it's only compatible with other functions marked <<__CrossPackage(pkg1)>> [2]
-> This function is marked <<__CrossPackage(pkg2)>> [3]

cross_package_with_requirepackage_attr_inheritance.php--a.php:21:30
     4 | interface IA {
     5 |   <<__RequirePackage("pkg2")>>
[3]  6 |   public function test2(): void;
     7 | }
     8 | 
       :
    12 |   }
    13 |   <<__RequirePackage("pkg1")>> // error cross package mismatch
[2] 14 |   public function test2(): void {
    15 |   }
    16 | }
       :
    19 |   public function test(): void {} // ok
    20 | }
[1] 21 | class C extends B implements IA  {
    22 |   <<__Override, __RequirePackage("pkg2")>>
    23 |   public function test(): void {} // error

error: Typing[4341] The method test is not compatible with the overridden method [1]
-> Method test has type (function(): void) in C [1]
-> But it has type (function(): void) in parent B [2]
-> Type (function(): void) is not a subtype of (function(): void) [1]
-> Cross package mismatch [1]
-> This function is marked <<__CrossPackage(pkg2)>>, so it's only compatible with other functions marked <<__CrossPackage(pkg2)>> [1]
-> This function is not cross package [2]

cross_package_with_requirepackage_attr_inheritance.php--a.php:23:19
    17 | class B extends A implements IA  {
    18 |   <<__Override>>
[2] 19 |   public function test(): void {} // ok
    20 | }
    21 | class C extends B implements IA  {
    22 |   <<__Override, __RequirePackage("pkg2")>>
[1] 23 |   public function test(): void {} // error
    24 | }
    25 | 

4 errors found
